readme update with feature importances. main notebook update with minor details

--- a/Project5.ipynb
+++ b/Project5.ipynb
@@ -108,25 +108,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-07-29T18:36:00.819610Z",
-     "start_time": "2021-07-29T18:36:00.805607Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Talk about the general outline/ paint a story of what i am going to do in this project for the readers.\n",
-    "# talk about how the old tweet is from kaggle and point to it\n",
-    "# explain what data i have already and how i got my new data. and where it was stored/whre it was created : tweetextract\n",
-    "# give some explanation of what each dataframe\n",
-    "\n",
-    "#  ADD FEATURE IMPORTANCES IN THE RANDOM FOREST"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -136,13 +117,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,25 +124,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-07-29T18:36:00.835614Z",
-     "start_time": "2021-07-29T18:36:00.820610Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#Describe the the different dataframes and kinda give a brief description of each\n",
-    "# talk about how the new tweet was collected and mention the tweetextract.ipynb\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Old Tweet"
+    "### Old Tweet\n",
+    "This data frame contains old tweets from around 2013 and before, as mentioned above, the dataset was acquired from https://data.world/crowdflower/brands-and-product-emotions. After the cleaning there was a total of 8,306 tweets from a previous total of 9,092 tweets."
    ]
   },
   {
@@ -3013,7 +2973,7 @@
    "metadata": {},
    "source": [
     "### New Tweet\n",
-    "Now we want to clean the newer tweets collected using tweepy."
+    "Now we want to clean the newer tweets collected using Tweepy and Twitter's developer API. The new tweets were collected using TwweetExtract.ipynb where the API call tokens and personal tokens are stored. There, I created a new csv file that is called using the pd.read_csv function. Originally I had intended to collect a total of 4,500 tweets, but after cleaning, I was left with 3,405 tweets as many did not have any relevance to the companies I was looking for."
    ]
   },
   {
@@ -7467,6 +7427,8 @@
    "metadata": {},
    "source": [
     "## Old Tweet Modeling\n",
+    "For both the old tweets and new tweets, I used random forest and naive bayesian models. For the random forest models, I first made them without any parameters. Then I used pipelining and grid search cv to find the best parameters. For naive bayesian models, I created the base models then used grid search to improve the models' performance. \n",
+    "\n",
     "### Preprocessing"
    ]
   },
@@ -7496,6 +7458,7 @@
    },
    "outputs": [],
    "source": [
+    "# Train test split\n",
     "old_X_train , old_X_test , old_y_train , old_y_test = train_test_split(old_X, old_y, test_size= .3, random_state= 334)"
    ]
   },
@@ -9057,7 +9020,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, again, I plotted the 30 most important words that the random forest model used to determine the tweets' sentiment. Words such as Like, free, love, and best could be observed at the top of the list in both feature importance analysis"
+    "Here, again, I plotted the 30 most important words that the random forest model used to determine the tweets' sentiment. Words such as like, free, love, and best could be observed at the top of the list in both feature importance analysis"
    ]
   },
   {
